Uploaded via K.J.P.Vaibhav's PC

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                       <div class="owl-carousel owl-theme">
                         <div class="item">
                           <div class="project-info">
-                            <h3>VEDA : Voice Enabled Digital Assistance</h3>
+                            <h3><a href="https://github.com/kjpvaibhav/Major-Project">VEDA : Voice Enabled Digital Assistance</a></h3>
                             <ul class="Project-Info-ul">
                                 <li>• Under the guidance of Dr. G. Narasimha, Prof. of CSE and Principal of JNTUH-UCES; Collaborated with my academic project teammates to create a Digital Assistant which can help the students, faculties, guests to know about our campus, navigate and do lot more stuff.</li>
                                 <li>• The application enables the users to know about our campus, help them with class schedules, attendance, navigate between classes and building in our campus<br><br></li>
@@ -125,7 +125,7 @@
 
                         <div class="item">
                           <div class="project-info">
-                           <h3>EffiCheck!</h3>
+                           <h3><a href="https://github.com/kjpvaibhav/Mini-Project">EffiCheck!</a></h3>
                             <ul class="Project-Info-ul">
                                 <li>• Under the guidance of Dr. G. Narasimha, Prof. of CSE and Principal of JNTUH-UCES; Teamed up with three of my classmates to create a system which uses Computer Vision to analyse the ID Cards of the students and faculties for In &amp; Out Timings.</li>
                                 <li>• The system dynamically scrapes the data from the ID provided by the user and gives out Name, Year, In &amp; Out timings for the user to make a record and inform on late-comers. Achieved accuracy of my system was 85&percnt;.<br><br></li>
