--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <div class="animated-info">
                                     <span class="animated-item">Kamarajugadda Vaibhav</span>
                                     <span class="animated-item">Software Developer</span>
-                                    <span class="animated-item">AI-ML Engineer</span>
+                                    <span class="animated-item">Data Analyst</span>
                                     <span class="animated-item">Web Developer</span>
                                 </div>
                         </h1>
@@ -113,6 +113,16 @@
                       </div>
 
                       <div class="owl-carousel owl-theme">
+                        <div class="item">
+                          <div class="project-info">
+                            <h3><a href="https://github.com/kjpvaibhav/PGD-Project">Multi Class Classification on Retinal Eye Diseases using Swin Transformer</a></h3>
+                            <ul class="Project-Info-ul">
+                                <li>• Under the guidance of Ms. Irene, CDAC, Chennai. I have created a Deep Learning Model using Swin Transformer on ODIR-5K Dataset. </li>
+                                <li>• The model has achieved better results like Accuracy, Sensitivity and Specificity compared to previous model in Multi Class Classification. In Multi-Label Classification, it has achieved 99% accuracy across 8 labels.<br><br></li>
+                            </ul>
+                          </div>
+                        </div>
+                        
                         <div class="item">
                           <div class="project-info">
                             <h3><a href="https://github.com/kjpvaibhav/Major-Project">VEDA : Voice Enabled Digital Assistance</a></h3>
@@ -230,7 +240,7 @@
                           </div>
                           <div class="timeline-info">
                               <h3><span>Post Graduate Diploma</span><small><a href="https://cdac.in/index.aspx?id=acts"><b>CDAC-ACTS, Chennai</b></a></small></h3>
-                              <p>• Pursuing my Post Graduate Diploma in Big Data Analysis (PGD-DBA). <br>• CGPA/Percentage : Ongoing</p>
+                              <p>• Pursuing my Post Graduate Diploma in Big Data Analysis (PGD-DBA). <br>• Percentage : 81.38%</p>
                           </div>
                         </div>
 
