--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
                               <span>2025</span>
                           </div>
                           <div class="timeline-info">
-                              <h3><span>Post Graduate Diploma</span><small><a href="https://cdac.in/index.aspx?id=acts"><b>CDAC-ACTS, Chennai</b></a></small></h3>
-                              <p>• Pursuing my Post Graduate Diploma in Big Data Analysis (PGD-DBA). <br>• Percentage : 81.38%</p>
+                              <h3><span>Post Graduate Diploma</span><small><a href="https://cdac.in/index.aspx?id=acts"><b>ACTS C-DAC, Chennai</b></a></small></h3>
+                              <p>• Post Graduate Diploma in Big Data Analysis (PGD-DBA). <br>• Percentage : 81.38%</p>
                           </div>
                         </div>
 
