--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                              </div>
                              <div class="timeline-info">
                                   <h3><span>Graduation</span><small><a href="http://jntuhces.ac.in/"><b>JNTUH University College of Engineering Sultanpur</b></a></small></h3>
-                                  <p>• Bachelor of Technology in Computer Science and Engineering (CSE). <br>• Board : JNTUH (Jawaharlal Nehru Technological University Hyderabad)<br>• CGPA : 6.85<br>• Aggregate Marks Percentage : 81.21%</p>
+                                  <p>• Bachelor of Technology in Computer Science and Engineering (CSE). <br>• Board : JNTUH (Jawaharlal Nehru Technological University Hyderabad)<br>• CGPA : 6.85</p>
                              </div>
                         </div>
 
